--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-</head>
-<body>
-     <h1>Rock Paper Scissors</h1>
+    <link rel="stylesheet" href="style.css"
+  </head>
+  <body>
+    <h1>Rock Paper Scissors</h1>
     <p>Click on a button to make your selection:</p>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
@@ -15,5 +16,5 @@
     <div id="results"></div>
     <div id="score"></div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
