--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <button id="scissors">Scissors</button>
     <div id="results"></div>
     <div id="score"></div>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
