--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="./css/style.css"
+    <link rel="stylesheet" href="style.css"
   </head>
   <body>
     <h1>Rock Paper Scissors</h1>
@@ -15,6 +15,6 @@
     <button id="scissors">Scissors</button>
     <div id="results"></div>
     <div id="score"></div>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
