--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button id="scissors">Scissors</button>
     <div id="results"></div>
     <div id="score"></div>
+    <button id="restart">Restart</button>
     <script src="script.js"></script>
   </body>
 </html>
+
